# quiz-backend

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  search.sql
migrations/2020-06-20-233747_init/: down.sql  up.sql
src/: auth_routes.rs  lib.rs  main.rs  models.rs  quiz_routes.rs  routes.rs  schema.rs
src/models/: auth_models.rs  mod.rs  quiz_models.rs
src/routes/: auth_types.rs  mod.rs  quiz_functions.rs  quiz_routes.rs
src/routing/: auth_functions.rs  auth_routes.rs  quiz_functions.rs  quiz_routes.rs  quiz_types.rs
src/utils/: sql_utils.rs
tests/: quiz_functions.rs
