[package]
name = "quizzes_backend"
version = "0.1.0"
authors = ["ShaneEverittM <shaneemurphy146@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

# For connecting with the MySQL database
diesel ="1.4.2"   


# Rocket Webserver
rocket = "0.4.4"
rocket_cors = "0.5.1"
rocket_contrib = { version = "0.4.4", features = ["json", "diesel_mysql_pool"] }

rust-crypto = "0.2.36"

# Serialization/Deserialization
serde_json = "1.0.39"
serde = "1.0.90"
serde_derive = "1.0.90"