[package]
name = "quizzes_backend"
version = "0.1.0"
authors = ["ShaneEverittM <shaneemurphy146@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

# For connecting with the MySQL database
diesel ="~1.4"


# Rocket Webserver
rocket = "~0.4"
rocket_cors = "~0.5"
rocket_contrib = { version = "~0.4", features = ["json", "diesel_mysql_pool"] }

rust-crypto = "~0.2"

# Serialization/Deserialization
serde_json = "~1.0"
serde = "~1.0"
serde_derive = "~1.0"